--- a/Credit_Card.html
+++ b/Credit_Card.html
@@ -11,6 +11,7 @@
 <body>
 
 <div class="container">
+    <h1 id = "header">To reserve a sit, please enter your credit card information</h1><br>
 
     <div class="card-container">
 
@@ -95,7 +96,9 @@
                 <input type="text" maxlength="4" class="cvv-input">
             </div>
         </div>
-        <input type="submit" value="Save Your Sit!" class="submit-btn">
+
+        <input type="submit" value="Save Your Sit!" class="submit-btn"><br>
+        <br><a href="home1.html">Back home</a>
     </form>
 
 </div>    
