--- a/Reservations.html
+++ b/Reservations.html
@@ -43,19 +43,21 @@
 
         <div class="col-2-bar">
             <a href="signin.html" class="footer">
-                <button class="headerBTN" id="login">Log in/ Sign in</button>
+                <button class="headerBTN" id="login">Log in</button>
             </a>
         </div>
 </div>
 
-    <!-- main -->
+<!-------- My reservations -------->
+
+
     <div class="col-12">
         <div class="col-3">
             <div class="resImg">
                 <img src="images/asian.PNG" style="width: 100%;"><br><br>
                 <img src="images/beit_kandinof.PNG" style="width: 100%;" ><br><br>
-                <img src="images/wine.PNG" style="width: 100%;"><br><br>
-                <img src="images/food.PNG" style="width: 100%;"><br><br>
+                <img src="images/4.PNG" style="width: 100%;"><br><br>
+                <img src="images/14.PNG" style="width: 100%;"><br><br>
                 <img src="images/gaia_garden.png" style="width: 100%;"><br>
             </div>
         </div>
@@ -148,11 +150,11 @@
         </div>
         <div class="col-3">
             <div class="resImg">
-                <img src="images/asian.PNG" style="width: 100%;"><br><br>
-                <img src="images/beit_kandinof.PNG" style="width: 100%;" ><br><br>
-                <img src="images/wine.PNG" style="width: 100%;"><br><br>
                 <img src="images/food.PNG" style="width: 100%;"><br><br>
-                <img src="images/gaia_garden.png" style="width: 100%;"><br>
+                <img src="images/14.PNG" style="width: 100%;" ><br><br>
+                <img src="images/wine.PNG" style="width: 100%;"><br><br>
+                <img src="images/live_map1.PNG" style="width: 100%;"><br><br>
+                <img src="images/13.png" style="width: 100%;"><br>
             </div>
         </div>
     </div>
@@ -198,7 +200,7 @@
 
     </div>
     <div class="col-4-footer">
-                 <h4 style="color: gray"> SitMe is part of Booking Holdings, the world leader in online travel and related services</h4>
+                 <h3 style="color: gray"> SitMe is part of Booking Holdings,<br> the world leader in online travel and related services</h3>
                  <a href="https://www.booking.com/index.html?aid=1703513&label=55&">
                         <img src="images/sp1.PNG" width="50%"><br>
                  </a>
