--- a/SearchResults.html
+++ b/SearchResults.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8"> 
     <link rel="stylesheet" href="header_and_footer.css">
-    <link rel="stylesheet" href="SearchResults.css">    
-    <!-- <script src="SearchResults.js"> </script>            -->
+    <link rel="stylesheet" href="SearchResults.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Results</title>
@@ -46,12 +45,14 @@
 
         <div class="col-2-bar">
             <a href="signin.html" class="footer">
-                <button class="headerBTN" id="login">Log in/ Sign in</button>
+                <button class="headerBTN" id="login">Log in</button>
             </a>
         </div>
 </div>
 
-    <!-- main -->
+<!-------- Main -------->
+
+
     <div class="col-12">
         <div class="col-2">   
             <div id="Left">
@@ -130,11 +131,21 @@
                                 Asian &#9679 50 and over &#9679 Tel Aviv
                             </p>
                             <div class="hours">
-                                <button>14:00</button>
-                                <button>15:00</button>
-                                <button>16:00</button>
-                                <button>17:00</button>
-                                <button>18:00</button>
+                                <a href="Credit_Card.html">
+                                <button type="button">14:00</button>
+                                </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">15:00</button>
+                                </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">16:00</button>
+                                </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">17:00</button>
+                                 </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">18:00</button>
+                                 </a>
                             </div>
                         </div>
                     </div>
@@ -163,11 +174,21 @@
                                 Asian &#9679 50 and over &#9679 Tel Aviv
                             </p>
                             <div class="hours">
-                                <button>14:00</button>
-                                <button>15:00</button>
-                                <button>16:00</button>
-                                <button>17:00</button>
-                                <button>18:00</button>
+                                <a href="Credit_Card.html">
+                                <button type="button">14:00</button>
+                                </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">15:00</button>
+                                </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">16:00</button>
+                                </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">17:00</button>
+                                 </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">18:00</button>
+                                 </a>
                             </div>
                         </div>
                     </div>
@@ -196,11 +217,21 @@
                                 Steak House &#9679 30-50 &#9679 Beer Sheva
                             </p>
                             <div class="hours">
-                                <button>14:00</button>
-                                <button>15:00</button>
-                                <button>16:00</button>
-                                <button>17:00</button>
-                                <button>18:00</button>
+                                <a href="Credit_Card.html">
+                                <button type="button">14:00</button>
+                                </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">15:00</button>
+                                </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">16:00</button>
+                                </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">17:00</button>
+                                 </a>
+                                <a href="Credit_Card.html">
+                                <button type="button">18:00</button>
+                                 </a>
                             </div>
                         </div>
                     </div>
@@ -229,7 +260,7 @@
         </div>
     </div>
 
- <!-------- footer -------->
+<!-------- footer -------->
 
 <div class="col-12-footer">
 
@@ -270,7 +301,7 @@
 
     </div>
     <div class="col-4-footer">
-                 <h4 style="color: gray"> SitMe is part of Booking Holdings, the world leader in online travel and related services</h4>
+                 <h3 style="color: gray"> SitMe is part of Booking Holdings,<br> the world leader in online travel and related services</h3>
                  <a href="https://www.booking.com/index.html?aid=1703513&label=55&">
                         <img src="images/sp1.PNG" width="50%"><br>
                  </a>
