--- a/about.html
+++ b/about.html
@@ -46,17 +46,18 @@
 
         <div class="col-2-bar">
             <a href="signin.html" class="footer">
-                <button class="headerBTN" id="login">Log in/ Sign in</button>
+                <button class="headerBTN" id="login">Log in</button>
             </a>
         </div>
 </div>
 
+<!-------- About -------->
 
 <div class="col-12 findTable" id = "background">
     <div class = "col-1"></div>
          <div class="col-10" class="About">
-              <h1 class="About">Our story</h1>
-                   <p style="color: dimgray">
+              <h1 class="center" style="color: dimgray;">Our story</h1>
+                   <p >
                     In SiteMe We love what can happen around the restaurant table, and we are committed to empowering that experience.<br>
 
                     From helping restaurants of all sizes thrive, to enabling diners to find and book the perfect table for every occasion.<br>
@@ -67,7 +68,7 @@
 
                     With our passion for hospitality, we take pride in bringing together people and the restaurants they love in the moments that matter.<br>
 
-                    <h3 class="center" style="color: dimgray;">Pull up a chair and join us</h3>
+                    <h2 class="center" style="color: dimgray;">Pull up a chair and join us</h2>
                    </p>
          <div id="frame" class = "col-12"  id="images"></div>
     </div>
@@ -116,7 +117,7 @@
 
     </div>
     <div class="col-4-footer">
-                 <h4 style="color: gray"> SitMe is part of Booking Holdings, the world leader in online travel and related services</h4>
+                 <h3 style="color: gray"> SitMe is part of Booking Holdings,<br> the world leader in online travel and related services</h3>
                  <a href="https://www.booking.com/index.html?aid=1703513&label=55&">
                         <img src="images/sp1.PNG" width="50%"><br>
                  </a>
