--- a/liveMap.html
+++ b/liveMap.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="header_and_footer.css">
-    <title>liveMap</title>
+<html>
+  <head>
+    <title>Geolocation</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <link rel="stylesheet" href="home_grid.css">
+
+<style>
+
+#map {
+  height: 100%;
+}
+
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.custom-map-control-button {
+  background-color: #fff;
+  border: 0;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
+  margin: 10px;
+  padding: 0 0.5em;
+  font: 400 18px Roboto, Arial, sans-serif;
+  overflow: hidden;
+  height: 40px;
+  cursor: pointer;
+}
+.custom-map-control-button:hover {
+  background: #ebebeb;
+}
+</style>
+
 </head>
-<body>
+  <body>
 
 <!-------- Welcome bar -------->
 
@@ -41,40 +73,101 @@
 
         <div class="col-2-bar">
             <a href="signin.html" class="footer">
-                <button class="headerBTN" id="login">Log in/ Sign in</button>
+                <button class="headerBTN" id="login">Log in</button>
             </a>
         </div>
 </div>
 
+<!-------- Restaurants based on your current location -------->
+
+<div class="col-3" id = "location">
+            <div class="col-4-location" >
+                 <h3>Restaurants based on your current location</h3>
+                <a href="liveMap.html" class="footer">
+                    <img class="center" src="images/map.png" class = "location1">
+                </a>
+            </div>
+
+            <div class="col-4-location" >
+                <P><strong>HaTraklin</strong><br>Bistro - Wine</P>
+                <a href="http://www.hatraklin.co.il/">
+                        <img class="center" src="images/20.PNG">
+                </a><br>
+                <P><strong>Romano</strong><br>Eyal shani - Chef</P>
+                <a href="https://www.tripadvisor.com/ShowUserReviews-g293984-d8545357-r300514473-Romano-Tel_Aviv_Tel_Aviv_District.html">
+                        <img class="center" src="images/21.PNG">
+                </a><br>
+                <P><strong>Roku</strong><br>Sushi - Japanese</P>
+                <a href="https://www.sushiroku.com/">
+                        <img class="center" src="images/22.PNG">
+                </a><br>
+            </div>
+</div>
+
+<!-------- Map -------->
+
+<div class="col-9" id="map">
+
+<script
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly&channel=2"
+async
+></script>
 <script>
-     const successCallback = (position) => {
-       console.log(position);
-     };
-     const errorCallback= (error) => {
-       console.log(error);
-     };
-     navigator.geolocation.getCurrentPosition(successCallback, errorCallback, {
-      enableHighAccuracy: true
-     });
 
-     $('#location-button').click(function(){
+let map, infoWindow;
 
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function(position){
-                  console.log(position);
-                  $.get( "http://maps.googleapis.com/maps/api/geocode/json?latlng="+ position.coords.latitude + "," + position.coords.longitude +"&sensor=false", function(data) {
-                    console.log(data);
-                  })
-                  var img = new Image();
-                  img.src = "https://maps.googleapis.com/maps/api/staticmap?center=" + position.coords.latitude + "," + position.coords.longitude + "&zoom=13&size=800x400&sensor=false";
-                  $('#output').html(img);
-                });
+function initMap() {
+  map = new google.maps.Map(document.getElementById("map"), {
+    center: { lat: -34.397, lng: 150.644 },
+    zoom: 6,
+  });
+  infoWindow = new google.maps.InfoWindow();
 
-            }
-     });
+  const locationButton = document.createElement("button");
 
-</script>
-     <!-------- footer -------->
+  locationButton.textContent = "Click here to get Location";
+  locationButton.classList.add("custom-map-control-button");
+  map.controls[google.maps.ControlPosition.TOP_CENTER].push(locationButton);
+  locationButton.addEventListener("click", () => {
+
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(
+        (position) => {
+          const pos = {
+            lat: position.coords.latitude,
+            lng: position.coords.longitude,
+          };
+
+          infoWindow.setPosition(pos);
+          infoWindow.setContent("Location found.");
+          infoWindow.open(map);
+          map.setCenter(pos);
+        },
+        () => {
+          handleLocationError(true, infoWindow, map.getCenter());
+        }
+      );
+    } else {
+      // Browser doesn't support Geolocation
+      handleLocationError(false, infoWindow, map.getCenter());
+    }
+  });
+}
+
+function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+  infoWindow.setPosition(pos);
+  infoWindow.setContent(
+    browserHasGeolocation
+      ? "Error: The Geolocation service failed."
+      : "Error: Your browser doesn't support geolocation."
+  );
+  infoWindow.open(map);
+}
+    </script>
+</div>
+<div class="col-2"></div>
+
+<!-------- footer -------->
 
 <div class="col-12-footer">
 
@@ -127,8 +220,6 @@
                  </a>
     </div>
 </div>
-
-
 
 </body>
 </html>
