--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,7 @@
 
         <div class="col-2-bar">
             <a href="signin.html" class="footer">
-                <button class="headerBTN" id="login">Log in/ Sign in</button>
+                <button class="headerBTN" id="login">Log in</button>
             </a>
         </div>
 </div>
@@ -57,7 +57,6 @@
                 <img src="images/beit_kandinof.PNG" class="center" ><br>
                 <img src="images/wine.PNG" class="center" ><br>
                 <img src="images/food.PNG" class="center" ><br>
-                <img src="images/gaia_garden.png" class="center"><br>
                 <img src="images/left1.PNG" class="center"><br>
 
         </div>
@@ -91,7 +90,6 @@
                 <img src="images/beit_kandinof.PNG" class="center" ><br>
                 <img src="images/wine.PNG" class="center" ><br>
                 <img src="images/food.PNG" class="center" ><br>
-                <img src="images/gaia_garden.png" class="center"><br>
                 <img src="images/left1.PNG" class="center"><br>
           </div>
 
@@ -143,7 +141,7 @@
 
     </div>
     <div class="col-4-footer">
-                 <h4 style="color: gray"> SitMe is part of Booking Holdings, the world leader in online travel and related services</h4>
+                 <h3 style="color: gray"> SitMe is part of Booking Holdings,<br> the world leader in online travel and related services</h3>
                  <a href="https://www.booking.com/index.html?aid=1703513&label=55&">
                         <img src="images/sp1.PNG" width="50%"><br>
                  </a>
