--- a/home1.html
+++ b/home1.html
@@ -57,7 +57,7 @@
 
         <div class="col-2-bar">
             <a href="signin.html" class="footer">
-                <button class="headerBTN" id="login">Log in/ Sign in</button>
+                <button class="headerBTN" id="login">Log in</button>
             </a>
         </div>
 </div>
@@ -95,22 +95,36 @@
                 <input type="date" id="date" name="date"><br>
                 <label class="labels" for="time">Time</label><br>
                 <input type="time" id="time" name="time"><br>
-                <label class="labels" for="num_people">People</label><br>
-                <input id = "num_people" type="number" name="number"><br>
-                <label class="labels" for="location">Location</label><br>
-                <input id = "location" type="location" name="location"><br><br>
+                <label class="labels" for="num_people">Number of people</label><br>
+                <input id = "num_people" type="number" min ="1" max="9" name="number"><br>
+                <label class="labels" for="location">Location </label>
+                <br>
+                <input list = "location" type="location" name="location"/></label><br><br>
+                <datalist id = "location">
+                    <option value="Tel Aviv-Yafo">
+                        <option value="Beer Sheva">
+                        <option value="Haifa">
+                        <option value="Jerusalem">
+                        <option value="Acre">
+                        <option value="Zichron Yaakov">
+                        <option value="Herzliya">
+                        <option value="Ramat-Gan">
+                        <option value="Rishon LeTsiyon">
+                        <option value="Netanya">
+                        <option value="Eilat">
+
+                </datalist>
                 <a href="SearchResults.html">
                         <button class="button1" type="button">Find me a SIT</button>
                 </a>
           </div>
 
           <div class="col-3" >
-                <img src="images/asian.PNG" class="center"><br>
-                <img src="images/beit_kandinof.PNG" class="center" ><br>
-                <img src="images/wine.PNG" class="center" ><br>
-                <img src="images/food.PNG" class="center" ><br>
-                <img src="images/gaia_garden.png" class="center"><br>
-                <img src="images/left1.PNG" class="center"><br>
+                 <img src="images/1.PNG" class="center" ><br>
+                <img src="images/6.PNG" class="center" ><br>
+                <img src="images/8.PNG" class="center" ><br>
+                <img src="images/wine.PNG" class="center"><br>
+                <img src="images/14.png" class="center"><br>
           </div>
 
 
@@ -158,7 +172,7 @@
 
     </div>
     <div class="col-4-footer">
-                 <h4 style="color: gray"> SitMe is part of Booking Holdings, the world leader in online travel and related services</h4>
+                 <h3 style="color: gray"> SitMe is part of Booking Holdings,<br> the world leader in online travel and related services</h3>
                  <a href="https://www.booking.com/index.html?aid=1703513&label=55&">
                         <img src="images/sp1.PNG" width="50%"><br>
                  </a>
