--- a/signin.html
+++ b/signin.html
@@ -44,7 +44,7 @@
 
         <div class="col-2-bar">
             <a href="signin.html" class="footer">
-                <button class="headerBTN" id="login">Log in/ Sign in</button>
+                <button class="headerBTN" id="login">Log in</button>
             </a>
         </div>
 </div>
@@ -54,10 +54,9 @@
 <div class="col-12 findTable">
         <div class="col-4">
 
-                 <img src="images/beit_kandinof.PNG" class="center" ><br>
-                <img src="images/wine.PNG" class="center" ><br>
-                <img src="images/food.PNG" class="center" ><br>
-                <img src="images/gaia_garden.png" class="center"><br>
+                 <img src="images/9.PNG" class="center" ><br>
+                <img src="images/10.PNG" class="center" ><br>
+                <img src="images/12.PNG" class="center" ><br>
 
         </div>
 
@@ -70,7 +69,7 @@
                             <label for="password" class="labels">Password</label><br>
                             <input type="password" placeholder="Select a password" id="password" required><br>
                             <label for="name" class="labels">Full name</label><br>
-                            <input type="text" placeholder="Insert full name" id="name" required><br>
+                            <input type="text" placeholder="Insert your full name" id="name" required><br>
                             <div class="clearfix">
                                 <button class="button1" type="submit" class="signupbtn">Log in</button>
                             </div>
@@ -84,10 +83,9 @@
 
               <div class="col-4" id = right_photos>
 
-                <img src="images/beit_kandinof.PNG" class="center" ><br>
-                <img src="images/wine.PNG" class="center" ><br>
-                <img src="images/food.PNG" class="center" ><br>
-                <img src="images/gaia_garden.png" class="center"><br>
+                <img src="images/9.PNG" class="center" ><br>
+                <img src="images/10.PNG" class="center" ><br>
+                <img src="images/12.PNG" class="center" ><br>
 
               </div>
     </div>
@@ -133,7 +131,7 @@
 
     </div>
     <div class="col-4-footer">
-                 <h4 style="color: gray"> SitMe is part of Booking Holdings, the world leader in online travel and related services</h4>
+                 <h3 style="color: gray"> SitMe is part of Booking Holdings,<br> the world leader in online travel and related services</h3>
                  <a href="https://www.booking.com/index.html?aid=1703513&label=55&">
                         <img src="images/sp1.PNG" width="50%"><br>
                  </a>
