--- a/about.html
+++ b/about.html
@@ -83,7 +83,9 @@
     <div class="col-4-footer">
         <div class="col-12-footer">
             <img src="images/logo.PNG" class = "logo"><br>
-            <h1 class="FootCont">Contact us - 052-5225280</h1>
+            <a href="mailto:customerservice@sitme.com"target = blank class= "contact"><p class="contact"> <h1 class = "FootCont">Contact Us</h1></p></a>
+               <h5>Hashmonaim 119, Tel Aviv, Israel</h5>
+               <h5>©️ All Rights Reserved</h5>
         </div>
         <div class="col-12-footer">
           <button class="button1_left" onclick="topFunction()" id="topFunction" title="Back to top">Back to top</button>
